Fixed alignment issue

--- a/src/styles/CampusCoordinatorPage.css
+++ b/src/styles/CampusCoordinatorPage.css
@@ -10,6 +10,20 @@
     color: #FB3B3E;
 }
 
+.started_box_body {
+    display: block;
+    width: 337px;
+    font-family: Lovelo-Black;
+    font-size: 24px;
+    margin: 0 auto;
+    padding: 20px 0;
+    text-align: center;
+    color: white;
+}
+.started_box_body.link_no_decoration {
+    color: white;
+}
+
 .section_header_blue {
     padding: 50px 0;
     text-align: center;
@@ -107,6 +121,13 @@
 @media only screen and (max-width: 600px) {
     .banner_box.campus_coordinator {
         background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/images/crowded-street_shutterstock_1053948191_small.jpg');
+    }
+
+    .started_box_body {
+        width: 90%;
+        font-family: Lovelo-Black;
+        font-size: 24px;
+        text-align: center;
     }
 
     .section_info_two_wide_container .section_info_text {
